--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-
- @import url(https://fonts.googleapis.com/css?family=Poiret+One);
+@import url(https://fonts.googleapis.com/css?family=Poiret+One);
  body {
 	 background-color: #f1afaf;
 	 /* font-family: 'Poiret One', Segoe UI Light, cursive; */
@@ -228,4 +227,29 @@ h1{
 		 transform: rotateX(180deg);
 	}
 }
- 
+.corner-image {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    transform: rotate(45deg);
+}
+
+#top-left {
+    top: 80px;
+    left: 50px;
+}
+
+#top-right {
+    top: 80px;
+    right: 50px;
+}
+
+#bottom-left {
+    bottom: 80px;
+    left: 50px;
+}
+
+#bottom-right {
+    bottom: 80px;
+    right: 50px;
+}
